--- a/.config/bspwm/polybar/config
+++ b/.config/bspwm/polybar/config
@@ -17,9 +17,9 @@ font-0 = "JetBrainsMono Nerd Font:size=10.5;3"
 font-3 = "JetBrainsMono Nerd Font:size=14;4"
 font-1 = "Material Design Icons Desktop:size=11;3"
 font-2 = "Material Design Icons Desktop:size=15;4"
-modules-left= launcher bspwm cpu memory filesystem installed-pkgs title
-#modules-center = title
-modules-right = mpd battery volume brightness time powermenu
+modules-left= launcher bspwm sep2 mpd
+modules-center = title
+modules-right = volume battery sep2 volume brightness time powermenu
 width = 100%
 height = 30
 border-size = 4
