--- a/.config/bspwm/polybar/config
+++ b/.config/bspwm/polybar/config
@@ -19,7 +19,7 @@ font-1 = "Material Design Icons Desktop:size=11;3"
 font-2 = "Material Design Icons Desktop:size=15;4"
 modules-left= launcher bspwm sep2 mpd
 modules-center = title
-modules-right = volume battery sep2 volume brightness time powermenu
+modules-right = volume battery sep2 volume brightness network time powermenu
 width = 100%
 height = 30
 border-size = 4
